namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uat
---
apiVersion: v1
kind: Namespace
metadata:
  name: production
