mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  namespace: uat
  labels:
    app: mysql-5.7
spec:
  ports:
    - port: 3306 
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: mysql-master
  namespace: uat
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.7
        name: mysql
        args:  
        - "--lower_case_table_names=1"
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: local-pv-mysql
