php-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-mysql
  namespace: uat
  labels:
    app: php-mysql-V1.0.0
spec:
  ports:
    - port: 8080
      targetPort: 80
      name: http
  selector:
    app: php-mysql
  type: NodePort 
---
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: php-mysql
  namespace: uat
spec:
  selector:
    matchLabels:
      app: php-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: php-mysql
    spec:
      containers:
      - image: autherlj/devopshomework
        name: php-mysql
        ports:
        - containerPort: 80
          name: http
